--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
             <version>5.2.2</version>
             <type>pom.sha512</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-examples</artifactId>
+            <version>5.2.2</version>
+            <type>pom.sha512</type>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
